--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "hexo-deployer-git": "^1.0.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.4"
   }
